// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultsRegistry factory can add vault 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 331010,
}
`;

exports[`VaultsRegistry owner can add factory 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47318,
}
`;

exports[`VaultsRegistry owner can add vault 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 49672,
}
`;

exports[`VaultsRegistry owner can register implementation contract 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47489,
}
`;

exports[`VaultsRegistry owner can remove factory 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 25481,
}
`;

exports[`VaultsRegistry owner can remove implementation 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 25432,
}
`;
